--- a/_config.yml
+++ b/_config.yml
@@ -8,7 +8,7 @@ relative_permalinks: true
 
 # Setup
 title:            Byverdu
-tagline:          'DevBlogByverdu'
+tagline:          '|| Vallverdu'
 description:      'There is no place like GitHub'
 url:              http://byverdu.github.io/
 baseurl:          /
