--- a/_config.yml
+++ b/_config.yml
@@ -22,6 +22,8 @@ paginate:         5
 sass:
     style: :compressed
 
+excerpt_separator: "<!-- more -->"
+
 # Custom vars
 version:          2.1.0
 
