--- a/_config.yml
+++ b/_config.yml
@@ -9,18 +9,22 @@ permalink:           pretty
 relative_permalinks: true
 
 # Setup
-title:               Lanyon
-tagline:             'A Jekyll theme'
-description:         'A reserved <a href="http://jekyllrb.com" target="_blank">Jekyll</a> theme that places the utmost gravity on content with a hidden drawer. Made by <a href="https://twitter.com/mdo" target="_blank">@mdo</a>.'
-url:                 http://lanyon.getpoole.com
-baseurl:             /
-paginate:            5
+title:            Byverdu
+tagline:          '|| Vallverdu'
+description:      'There is no place like GitHub'
+url:              http://byverdu.github.io/
+baseurl:          /
 
-# About/contact
 author:
-  name:              Mark Otto
-  url:               https://twitter.com/mdo
-  email:             markdotto@gmail.com
+  name:           'Albert Vallverdu'
+  url:            https://twitter.com/byverdu
+
+paginate:         5
+
+sass:
+    style: :compressed
+
+excerpt_separator: "<!-- more -->"
 
 # Custom vars
 version:             1.0.0
