changed favicon, sidebar and swap about page for cv page

--- a/_config.yml
+++ b/_config.yml
@@ -28,3 +28,6 @@ excerpt_separator: "<!-- more -->"
 
 # Custom vars
 version:             1.0.0
+
+github:
+  repo:           https://github.com/byverdu/byverdu.github.io.git
