--- a/_config.yml
+++ b/_config.yml
@@ -22,12 +22,11 @@ author:
 paginate:         5
 
 sass:
-    style: :compressed
+  style: :compressed
 
 excerpt_separator: "<!-- more -->"
 
 # Custom vars
 version:             1.0.0
 
-github:
-  repo:           https://github.com/byverdu/byverdu.github.io.git
+github_repo: https://github.com/byverdu/byverdu.github.io.git
